--- a/二级/zcfg.html
+++ b/二级/zcfg.html
@@ -47,11 +47,11 @@
 					<li>
 					<a href="xhgk.html">协会概况</a>
 					   <ul class="two">
-						<li><a href="">总会介绍</a></li>
-						<li><a href="">专委会介绍</a></li>
-						<li><a href="">我会章程</a></li>
-						<li><a href="">组织机构</a></li>
-						<li><a href="">领导组成</a></li>
+						<li><a href="javascript:;" onclick="gotoxhgk(1)">总会介绍</a></li>
+						<li><a href="javascript:;" onclick="gotoxhgk(2)">专委会介绍</a></li>
+						<li><a href="javascript:;" onclick="gotoxhgk(3)">我会章程</a></li>
+						<li><a href="javascript:;" onclick="gotoxhgk(4)">组织机构</a></li>
+						<li><a href="javascript:;" onclick="gotoxhgk(5)">领导组成</a></li>
 					   </ul>
 					</li>
 					<li>
@@ -60,53 +60,53 @@
 					<li>
 					<a href="xwzx.html">新闻资讯</a>
 					   <ul class="two">
-						<li><a href="">协会资讯</a></li>
-						<li><a href="">专委会资讯</a></li>
-						<li><a href="">行业资讯</a></li>
+						<li><a href="javascript:;" onclick="gotoxwzx(1)">协会资讯</a></li>
+						<li><a href="javascript:;" onclick="gotoxwzx(2)">专委会资讯</a></li>
+						<li><a href="javascript:;" onclick="gotoxwzx(3)">行业资讯</a></li>
 					   </ul>
 					</li>
 					<li><a href="zhzj.html">智慧职教</a>
 						<ul class="two">
-						<li><a href="">专家智库</a></li>
-						<li><a href="">会议培训</a></li>
-						<li><a href="">竞赛展演</a></li>
-				        </ul>
+						<li><a href="javascript:;" onclick="gotozhzj(1)">专家智库</a></li>
+						<li><a href="javascript:;" onclick="gotozhzj(2)">会议培训</a></li>
+						<li><a href="javascript:;" onclick="gotozhzj(3)">竞赛展演</a></li>
+					    </ul>
 					</li>
 					<li><a href="zjfc.html">教职风采</a>
 					    <ul class="two">
-						<li><a href="">职校风采</a></li>
-						<li><a href="">职师风采</a></li>
-						<li><a href="">职生风采</a></li>
-						<li><a href="">职企风采</a></li>
-				       </ul>
+						<li><a href="javascript:;" onclick="gotozjfc(1)">职校风采</a></li>
+						<li><a href="javascript:;" onclick="gotozjfc(2)">职师风采</a></li>
+						<li><a href="javascript:;" onclick="gotozjfc(3)">职生风采</a></li>
+						<li><a href="javascript:;" onclick="gotozjfc(4)">职企风采</a></li>
+					   </ul>
 					</li>
 					<li><a href="zjgl.html">职教管理</a>
 						<ul class="two">
-						<li><a href="">学术交流</a></li>
-						<li><a href="">考察交流</a></li>
-						<li><a href="">国外交流</a></li>
+						<li><a href="javascript:;" onclick="gotozjgl(1)">学术交流</a></li>
+						<li><a href="javascript:;" onclick="gotozjgl(2)">考察交流</a></li>
+						<li><a href="javascript:;" onclick="gotozjgl(3)">国外交流</a></li>
 					    </ul>
 					</li>
 					<li><a href="hyfw.html">会员服务</a>
 						<ul class="two">
-						<li><a href="">入会说明</a></li>
-						<li><a href="">会费说明</a></li>
-						<li><a href="">会员公约</a></li>
-						<li><a href="">会员查询</a></li>
-						<li><a href="">入会申请</a></li>
+						<li><a href="javascript:;" onclick="gotohyfw(1)">入会说明</a></li>
+						<li><a href="javascript:;" onclick="gotohyfw(2)">会费说明</a></li>
+						<li><a href="javascript:;" onclick="gotohyfw(3)">会员公约</a></li>
+						<li><a href="javascript:;" onclick="gotohyfw(4)">会员查询</a></li>
+						<li><a href="javascript:;" onclick="gotohyfw(5)">入会申请</a></li>
 					    </ul>
 					</li>
 					<li><a href="zscx.html">证书查询</a>
 						<ul class="two">
-						<li><a href="">证书类型</a></li>
-						<li><a href="">姓名</a></li>
-						<li><a href="">证书编号</a></li>
+						<li><a href="javascript:;" onclick="gotozscx(1)">证书类型</a></li>
+						<li><a href="javascript:;" onclick="gotozscx(2)">姓名</a></li>
+						<li><a href="javascript:;" onclick="gotozscx(3)">证书编号</a></li>
 					    </ul>
 					</li>
 					<li><a href="lxwm.html">联系我们</a>
 						<ul class="two">
-						<li><a href="">联系我们</a></li>
-						<li><a href="">公众号</a></li>
+						<li><a href="javascript:;" onclick="gotolxwm(1)">联系我们</a></li>
+						<li><a href="javascript:;" onclick="gotolxwm(2)">公众号</a></li>
 					    </ul>
 					</li>
 				</ul>
@@ -186,6 +186,7 @@
 				</div>
 			</div>
 		<script src="js/tab-12.3.5.js"></script>
+		<script src="../js/goto.js"></script>
 		<script type="text/javascript">
 			var currentActiveRow;//当前选中行
 			//改变选中行的颜色
@@ -201,6 +202,49 @@
 				
 				document.getElementById(id).scrollIntoView(true);
 			}
+		</script>
+		<script>
+		// 获取url传参数据
+		var GetRequest=function() {
+			var url = location.search; //获取url中"?"符后的字串 
+			var theRequest = new Object();
+			if (url.indexOf("?") != -1) {
+				var str = url.substr(1);
+				strs = str.split("&");
+				for (var i = 0; i < strs.length; i++) {
+					theRequest[strs[i].split("=")[0]] =         
+					unescape(strs[i].split("=")[1]);
+				 }
+			}
+			return theRequest;
+		}
+		var Requests = new Object();
+		Requests = GetRequest(); //获取结果
+		let option = Requests.option
+		// console.log(Requests) //获取所有参数
+		// console.log(Requests.option) //获取单个参数
+		
+		//判断option是否有参数，没有参数指向第一个按钮
+		if(option == undefined){
+			setTab('menu',1,3)
+		}else{
+			setTab('menu',option,3)
+		}
+		
+		   function setTab(name,cursel,n){
+			   // console.log('11111')
+			   for(i=1;i<=n;i++){
+				   var menu=document.getElementById(name+i);
+				   var con=document.getElementById("con_"+name+"_"+i);
+				   menu.className=i==cursel?"hover":"";
+				   menu.style.color=i==cursel?"white":"gray"
+				   con.style.display=i==cursel?"block":"none";
+				   // console.log(menu)
+			   }
+		   }
+		// function gotoxhgk(id){
+		// 	window.open("xhgk.html?option="+id);
+		// }
 		</script>
 	</body>
 </html>
